--- a/app/src/main/res/layout/new_products.xml
+++ b/app/src/main/res/layout/new_products.xml
@@ -45,7 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
             android:fontFamily="@font/amethysta"
-            android:text="Product Name"
+            android:text="Nom duproduit"
             android:textSize="17sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -64,7 +64,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/amethysta"
-                android:text="Price: $"
+                android:text="prix: $"
                 android:textColor="#673AB7"
                 android:textSize="18sp"
                 android:textStyle="bold"
