--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -27,7 +27,7 @@
         android:fontFamily="@font/amethysta"
         android:gravity="center"
         android:padding="18dp"
-        android:text="  Show your Total Prix "
+        android:text="le prix total est : "
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +53,7 @@
         android:drawableLeft="@drawable/ic_baseline_shopping_cart_24"
         android:drawableTint="@color/white"
         android:padding="14dp"
-        android:text="Buy Now"
+        android:text="Acheter maintenant"
         android:textAllCaps="false"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
