--- a/app/src/main/res/layout/activity_detailed.xml
+++ b/app/src/main/res/layout/activity_detailed.xml
@@ -56,15 +56,14 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:fontFamily="@font/amethysta"
                     android:id="@+id/detailed_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Product Name"
+                    android:fontFamily="@font/amethysta"
+                    android:text="Nom du produit"
                     android:textColor="@color/black"
                     android:textSize="25sp"
-                    android:textStyle="bold"
-                    />
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/rating"
@@ -99,7 +98,7 @@
                 android:fontFamily="@font/amethysta"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Price"
+                android:text="prix"
                 android:textSize="21sp"
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
@@ -174,7 +173,7 @@
         android:drawableLeft="@drawable/mycart"
         android:drawableTint="@color/white"
         android:padding="14dp"
-        android:text="Add To Carte"
+        android:text="Ajouter au panier"
         android:textAllCaps="false"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/buy_now"
@@ -191,7 +190,7 @@
         android:drawableLeft="@drawable/ic_baseline_shopping_cart_24"
         android:drawableTint="@color/white"
         android:padding="14dp"
-        android:text="Buy Now"
+        android:text="Acheter maintenant"
         android:textAllCaps="false"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
