--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -89,7 +89,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Inscription"
-        android:textColor="@color/pink"
+        android:textColor="@color/black"
         android:textSize="19sp"
         android:textStyle="bold"
         android:onClick="signup"
