--- a/app/src/main/res/layout/activity_registration2.xml
+++ b/app/src/main/res/layout/activity_registration2.xml
@@ -110,7 +110,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Connexion"
-        android:textColor="@color/pink"
+        android:textColor="@color/black"
         android:textSize="19sp"
         android:textStyle="bold"
         android:onClick="signin"
