--- a/app/src/main/res/layout/category_liste.xml
+++ b/app/src/main/res/layout/category_liste.xml
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:fontFamily="@font/amethysta"
-            android:text="Category Name"
+            android:text="Nom de catégorie"
             android:textAlignment="center"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
